2006-01-20 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/xfs.cc: updated copy to provide detailed feedback.

2006-01-20 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/jfs.cc: small fix with sequence of mount,remount,unmount
	* src/xfs.cc: resizing now contains detailed feedback
	* src/FileSystem.cc: show exceptiondescription in operationdetails
	
2006-01-19 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/jfs.cc: resizing now contains detailed feedback 
	
2006-01-19 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* added detailed progressfeedback. It still needs some polishing, but
	  is already far better then the old situation. And what's more, it's
	  finally threadsafe :p
	  
2006-01-11 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* configure.in: bumped version to 0.1 
	  ================================================================================
	  
2006-01-08 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Win_GParted.h,
	  src/Win_GParted.cc: added visual feedback when unmounting or
	  deactivating swap. This can be usefull when it takes longer then
	  usual. 
	  
2006-01-07 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Dialog_Partition_Info.cc: removed separator in accordance to the
	  HIG
	* include/Win_GParted.h,
	  src/Win_GParted.cc: it's now possible to deactivate swap from within
	  gparted.
	* src/GParted_Core.cc: sleep one second after deletion of a partition to
	  give the kernel some time to reread the partitiontable.
	
2006-01-07 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Utils.cc: commented 'ss .imbue( std::locale( "" ) )' (#157871)
	* src/Win_GParted.cc,
	  src/TreeView_Detail.cc,
	  src/Dialog_Base_Partition.cc: cleanups
	* include/Dialog_Partition_New.h,
	  include/Partition.h,
	  src/Dialog_Partition_New.cc,
	  src/GParted_Core.cc,
	  src/Partition.cc: allow forced partitionsizes (aka: do not round to
	  cylinder). (#169486)

2006-01-06 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/VBox_VisualDisk.cc: replaced free_color() with deprecated