@@ -1,3 +1,10 @@
+2006-01-21 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/main.cc: cleanups
+	* src/ntfs.cc: use ntfsfix for scanning.
+	  run a simulation before performing an actual resize. more detailed
+	  feedback.
+
 2006-01-20 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/xfs.cc: updated copy to provide detailed feedback.
